--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "^14.0.6",
     "@angular/platform-browser-dynamic": "^14.0.6",
     "@angular/router": "^14.0.6",
+    "@types/stacktrace-js": "^2.0.3",
     "bootstrap": "5.1.3",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
+    "stacktrace-js": "^2.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
